The image pull policy is now configurable

--- a/kubernetes/charts-linera/templates/linera-proxy.yaml
+++ b/kubernetes/charts-linera/templates/linera-proxy.yaml
@@ -31,7 +31,7 @@ spec:
       terminationGracePeriodSeconds: 10
       containers:
         - name: linera-proxy
-          imagePullPolicy: Never
+          imagePullPolicy: {{ .Values.lineraImagePullPolicy }}
           image: {{ .Values.lineraImage }}
           ports:
             - containerPort: 19100
