--- a/kubernetes/charts-linera/values-dev-gcp.yaml
+++ b/kubernetes/charts-linera/values-dev-gcp.yaml
@@ -1,3 +1,4 @@
 # Values for charts charts-linera for the dev validator on GCP.
 
 lineraImage: us-docker.pkg.dev/linera-io-dev/linera-docker-repo/zefchain-gcp-test:0.1
+lineraImagePullPolicy: Always
