--- a/kubernetes/linera-validator/values-dev-gcp.yaml
+++ b/kubernetes/linera-validator/values-dev-gcp.yaml
@@ -1,4 +1,4 @@
-# Values for charts charts-linera for the dev validator on GCP.
+# Values for charts linera-validator for the dev validator on GCP.
 
 lineraImage: us-docker.pkg.dev/linera-io-dev/linera-docker-repo/zefchain-gcp-test:0.1
 lineraImagePullPolicy: Always
