--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -22,14 +22,6 @@ AdminOperation:
               TYPENAME: Epoch
 Amount:
   NEWTYPESTRUCT: U128
-ApplicationId:
-  ENUM:
-    0:
-      System: UNIT
-    1:
-      User:
-        NEWTYPE:
-          TYPENAME: UserApplicationId
 Block:
   STRUCT:
     - chain_id:
@@ -247,7 +239,7 @@ ChainOwnership:
 ChannelFullName:
   STRUCT:
     - application_id:
-        TYPENAME: ApplicationId
+        TYPENAME: GenericApplicationId
     - name:
         TYPENAME: ChannelName
 ChannelName:
@@ -338,6 +330,14 @@ ExecutedBlock:
           TYPENAME: OutgoingMessage
     - state_hash:
         TYPENAME: CryptoHash
+GenericApplicationId:
+  ENUM:
+    0:
+      System: UNIT
+    1:
+      User:
+        NEWTYPE:
+          TYPENAME: UserApplicationId
 HandleCertificateRequest:
   STRUCT:
     - certificate:
