--- a/kubernetes/linera-validator/templates/proxy.yaml
+++ b/kubernetes/linera-validator/templates/proxy.yaml
@@ -1,20 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: validator-1
-  labels:
-    app: validator-1
-spec:
-  type: LoadBalancer
-  loadBalancerIP: 34.151.215.158
-  selector:
-    app: validator-1
-  ports:
-    - name: zef
-      protocol: TCP
-      port: 19100
-      targetPort: linera-port
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -22,18 +5,18 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: validator-1
+      app: validator
   replicas: 1
   template:
     metadata:
       labels:
-        app: validator-1
+        app: validator
     spec:
-      serviceAccountName: linera-adminserviceaccount
+      serviceAccountName: linera-admin
       terminationGracePeriodSeconds: 10
       containers:
         - name: linera-proxy
-          imagePullPolicy: Never
+          imagePullPolicy: {{ .Values.lineraImagePullPolicy }}
           image: {{ .Values.lineraImage }}
           ports:
             - containerPort: 19100
