rename linera-execution::ApplicationId into GenericApplicationId (#1004)
* rename linera-execution::ApplicationId into GenericApplicationId

* fix doc

* rename UserApplicationId in the RPC schema

--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -23,13 +23,11 @@ AdminOperation:
 Amount:
   NEWTYPESTRUCT: U128
 ApplicationId:
-  ENUM:
-    0:
-      System: UNIT
-    1:
-      User:
-        NEWTYPE:
-          TYPENAME: UserApplicationId
+  STRUCT:
+    - bytecode_id:
+        TYPENAME: BytecodeId
+    - creation:
+        TYPENAME: MessageId
 Block:
   STRUCT:
     - chain_id:
@@ -247,7 +245,7 @@ ChainOwnership:
 ChannelFullName:
   STRUCT:
     - application_id:
-        TYPENAME: ApplicationId
+        TYPENAME: GenericApplicationId
     - name:
         TYPENAME: ChannelName
 ChannelName:
@@ -338,6 +336,14 @@ ExecutedBlock:
           TYPENAME: OutgoingMessage
     - state_hash:
         TYPENAME: CryptoHash
+GenericApplicationId:
+  ENUM:
+    0:
+      System: UNIT
+    1:
+      User:
+        NEWTYPE:
+          TYPENAME: ApplicationId
 HandleCertificateRequest:
   STRUCT:
     - certificate:
@@ -402,7 +408,7 @@ Message:
       User:
         STRUCT:
           - application_id:
-              TYPENAME: UserApplicationId
+              TYPENAME: ApplicationId
           - bytes: BYTES
 MessageId:
   STRUCT:
@@ -538,7 +544,7 @@ Operation:
       User:
         STRUCT:
           - application_id:
-              TYPENAME: UserApplicationId
+              TYPENAME: ApplicationId
           - bytes: BYTES
 Origin:
   STRUCT:
@@ -728,7 +734,7 @@ SystemMessage:
     11:
       RequestApplication:
         NEWTYPE:
-          TYPENAME: UserApplicationId
+          TYPENAME: ApplicationId
 SystemOperation:
   ENUM:
     0:
@@ -814,14 +820,14 @@ SystemOperation:
           - initialization_argument: BYTES
           - required_application_ids:
               SEQ:
-                TYPENAME: UserApplicationId
+                TYPENAME: ApplicationId
     10:
       RequestApplication:
         STRUCT:
           - chain_id:
               TYPENAME: ChainId
           - application_id:
-              TYPENAME: UserApplicationId
+              TYPENAME: ApplicationId
     11:
       Admin:
         NEWTYPE:
@@ -839,13 +845,7 @@ UserApplicationDescription:
     - parameters: BYTES
     - required_application_ids:
         SEQ:
-          TYPENAME: UserApplicationId
-UserApplicationId:
-  STRUCT:
-    - bytecode_id:
-        TYPENAME: BytecodeId
-    - creation:
-        TYPENAME: MessageId
+          TYPENAME: ApplicationId
 UserData:
   NEWTYPESTRUCT:
     OPTION:
