--- a/Cargo.toml
+++ b/Cargo.toml
@@ -123,11 +123,11 @@ linera-base = { version = "0.4.0", path = "./linera-base" }
 linera-chain = { version = "0.4.0", path = "./linera-chain" }
 linera-core = { version = "0.4.0", path = "./linera-core", default-features = false }
 linera-execution = { version = "0.4.0", path = "./linera-execution", default-features = false }
-linera-indexer = { version = "0.4.0", path = "./linera-indexer/lib" }
-linera-indexer-example = { version = "0.4.0", path = "./linera-indexer/example" }
-linera-indexer-graphql-client = { version = "0.4.0", path = "./linera-indexer/graphql-client" }
-linera-indexer-macro = { version = "0.4.0", path = "./linera-indexer/macro" }
-linera-indexer-plugins = { version = "0.4.0", path = "./linera-indexer/plugins" }
+linera-indexer = { path = "./linera-indexer/lib" }
+linera-indexer-example = { path = "./linera-indexer/example" }
+linera-indexer-graphql-client = { path = "./linera-indexer/graphql-client" }
+linera-indexer-macro = { path = "./linera-indexer/macro" }
+linera-indexer-plugins = { path = "./linera-indexer/plugins" }
 linera-rpc = { version = "0.4.0", path = "./linera-rpc" }
 linera-storage = { version = "0.4.0", path = "./linera-storage", default-features = false }
 linera-views = { version = "0.4.0", path = "./linera-views", default-features = false }
