Address several issues.

--- a/linera-indexer/Cargo.toml
+++ b/linera-indexer/Cargo.toml
@@ -12,7 +12,12 @@ edition = "2021"
 
 [features]
 default = ["rocksdb"]
-rocksdb = ["linera-views/rocksdb"]
+benchmark = ["linera-base/test"]
+wasmer = ["linera-execution/wasmer"]
+wasmtime = ["linera-execution/wasmtime"]
+rocksdb = ["linera-views/rocksdb", "linera-core/rocksdb"]
+aws = ["linera-views/aws", "linera-core/aws"]
+scylladb = ["linera-views/scylladb", "linera-core/scylladb"]
 
 [dependencies]
 async-graphql = { workspace = true }
