--- a/linera-indexer/plugins/Cargo.toml
+++ b/linera-indexer/plugins/Cargo.toml
@@ -10,6 +10,15 @@ documentation = "https://docs.rs/linera-indexer/latest/linera_indexer/"
 license = "Apache-2.0"
 edition = "2021"
 
+[features]
+default = ["rocksdb"]
+benchmark = ["linera-base/test"]
+rocksdb = ["linera-views/rocksdb", "linera-indexer/rocksdb"]
+aws = ["linera-views/aws", "linera-indexer/aws"]
+scylladb = ["linera-views/scylladb", "linera-indexer/scylladb"]
+wasmer = ["linera-execution/wasmer"]
+wasmtime = ["linera-execution/wasmtime"]
+
 [dependencies]
 async-trait = { workspace = true }
 async-graphql = { workspace = true }
