--- a/kubernetes/linera-validator/Chart.yaml
+++ b/kubernetes/linera-validator/Chart.yaml
@@ -22,3 +22,9 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
+
+# Dependencies of the application being deployed.
+dependencies:
+  - name: kube-prometheus-stack
+    version: "51.0.3"
+    repository: "https://prometheus-community.github.io/helm-charts"
