add message action: accept or explicitly reject

--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -380,6 +380,8 @@ IncomingMessage:
         TYPENAME: Origin
     - event:
         TYPENAME: Event
+    - action:
+        TYPENAME: MessageAction
 LiteCertificate:
   STRUCT:
     - value:
@@ -427,6 +429,12 @@ Message:
           - application_id:
               TYPENAME: ApplicationId
           - bytes: BYTES
+MessageAction:
+  ENUM:
+    0:
+      Accept: UNIT
+    1:
+      Reject: UNIT
 MessageId:
   STRUCT:
     - chain_id:
