--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,7 @@ futures = "0.3.24"
 generic-array = { version = "0.14.4", features = ["serde"] }
 hex = "0.4.3"
 http = "0.2.7"
+lazy_static = "1.4.0"
 log = "0.4.17"
 lru = "0.9.0"
 metrics = "0.21.0"
@@ -72,6 +73,7 @@ metrics-util = "0.15.0"
 linked-hash-map = "0.5.3"
 once_cell = "1.17.1"
 parse_duration = "2.1.1"
+prometheus = "0.13.3"
 proc-macro-error = "1.0.4"
 proc-macro2 = "1.0"
 proptest = "1.0.0"
