Fault-tolerant multi-owner chain manager (#1024)
* Add round leader PRNG to multi-owner chain manager.

* Implement the BFT protocol on the server side.

* Make weights and number of multi-leader rounds configurable.

* Add a unit test for leader timeouts.

* Make leader timeout test not depend on actual wall clock.

* Cleanups

* Extend test; allow validated certificates from earlier rounds.

This extends the worker test for the BFT protocol.

It also fixes the criterion for proposed blocks: The new proposal can be
from any round after the validated proposal, not just the next.

* Validated block certificate should not start the next round.

If there is a validated block certificate anyone can submit it to all
validators and get it confirmed, so it is better for liveness to stay
in the current round.

* Fix updater: Use local manager to determine what to send to validator.

* Revert make_certificate; add make_certificate_with_round.

* Increase the delay in explorer tests; they are flaky in CI.

* Make weights u64.

* Fix typos.

* Remove redundant check from single-owner manager.

* Remove next_round field from chain info.

* Inline a local variable.

--- a/linera-rpc/tests/staged/formats.yaml
+++ b/linera-rpc/tests/staged/formats.yaml
@@ -241,7 +241,11 @@ ChainOwnership:
                 KEY:
                   TYPENAME: Owner
                 VALUE:
-                  TYPENAME: PublicKey
+                  TUPLE:
+                    - TYPENAME: PublicKey
+                    - U64
+          - multi_leader_rounds:
+              TYPENAME: RoundNumber
 ChannelFullName:
   STRUCT:
     - application_id:
@@ -425,11 +429,18 @@ MultiOwnerManagerInfo:
           KEY:
             TYPENAME: Owner
           VALUE:
-            TYPENAME: PublicKey
+            TUPLE:
+              - TYPENAME: PublicKey
+              - U64
+    - multi_leader_rounds:
+        TYPENAME: RoundNumber
     - requested_proposed:
         OPTION:
           TYPENAME: BlockProposal
     - requested_locked:
+        OPTION:
+          TYPENAME: Certificate
+    - leader_timeout:
         OPTION:
           TYPENAME: Certificate
     - pending:
@@ -441,8 +452,13 @@ MultiOwnerManagerInfo:
     - requested_pending_value:
         OPTION:
           TYPENAME: CertificateValue
-    - round:
+    - current_round:
         TYPENAME: RoundNumber
+    - leader:
+        OPTION:
+          TYPENAME: Owner
+    - round_timeout:
+        TYPENAME: Timestamp
 NodeError:
   ENUM:
     0:
@@ -791,7 +807,11 @@ SystemOperation:
         STRUCT:
           - new_public_keys:
               SEQ:
-                TYPENAME: PublicKey
+                TUPLE:
+                  - TYPENAME: PublicKey
+                  - U64
+          - multi_leader_rounds:
+              TYPENAME: RoundNumber
     6:
       Subscribe:
         STRUCT:
