Add --initialize option to the server's run command

--- a/kubernetes/linera-validator/templates/server.yaml
+++ b/kubernetes/linera-validator/templates/server.yaml
@@ -54,6 +54,7 @@ spec:
               "0",
               "--genesis",
               "genesis.json",
+              "--initialize",
             ]
           volumeMounts:
           - name: rocksdb
