--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -43,6 +43,7 @@ once_cell = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
 tracing = { workspace = true }
 parse_duration = { workspace = true }
+rand07 = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 structopt = { workspace = true }
