Adding ServiceMonitor to server and proxy

--- a/kubernetes/linera-validator/templates/server.yaml
+++ b/kubernetes/linera-validator/templates/server.yaml
@@ -80,3 +80,16 @@ spec:
           env:
             - name: RUST_LOG
               value: {{ .Values.logLevel }}
+---
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: shards
+  labels:
+    team: infra
+spec:
+  selector:
+    matchLabels:
+      app: shards
+  endpoints:
+  - port: http
