--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -19,6 +19,7 @@ wasmtime = ["linera-execution/wasmtime", "linera-storage/wasmtime"]
 rocksdb = ["linera-views/rocksdb", "linera-core/rocksdb", "linera-storage/rocksdb"]
 aws = ["linera-views/aws", "linera-core/aws", "linera-storage/aws"]
 scylladb = ["linera-views/scylladb", "linera-core/scylladb", "linera-storage/scylladb"]
+prometheus-metrics = ["dep:lazy_static", "dep:prometheus"]
 
 [dependencies]
 anyhow = { workspace = true }
@@ -31,6 +32,7 @@ chrono = { workspace = true }
 colored = { workspace = true }
 futures = { workspace = true }
 hex = { workspace = true }
+lazy_static = { workspace = true, optional = true }
 linera-base = { workspace = true }
 linera-chain = { workspace = true }
 linera-core = { workspace = true }
@@ -58,6 +60,7 @@ tower-http = { workspace = true, features = ["cors"] }
 tracing-subscriber = { workspace = true, features = ["fmt"] }
 comfy-table = { workspace = true }
 dirs = { workspace = true }
+prometheus = { workspace = true, optional = true }
 file-lock = "2.1.9"
 current_platform = "0.2.0"
 cargo_toml = "0.15.3"
