--- a/configuration/prod/validator_1.toml
+++ b/configuration/prod/validator_1.toml
@@ -6,15 +6,62 @@ internal_port = 20100
 external_protocol = "Grpc"
 internal_protocol = "Grpc"
 
-# If deploying to GCP, host should be the Kubernetes pod name
 [[shards]]
 host = "shards-0.shards.default.svc.cluster.local"
 port = 19100
-metrics_host = "server-1-shard-0"
+metrics_host = "shards-0.shards.default.svc.cluster.local"
 metrics_port = 21100
 
 [[shards]]
 host = "shards-1.shards.default.svc.cluster.local"
 port = 19100
-metrics_host = "server-1-shard-1"
+metrics_host = "shards-1.shards.default.svc.cluster.local"
+metrics_port = 21100
+
+[[shards]]
+host = "shards-2.shards.default.svc.cluster.local"
+port = 19100
+metrics_host = "shards-2.shards.default.svc.cluster.local"
+metrics_port = 21100
+
+[[shards]]
+host = "shards-3.shards.default.svc.cluster.local"
+port = 19100
+metrics_host = "shards-3.shards.default.svc.cluster.local"
+metrics_port = 21100
+
+[[shards]]
+host = "shards-4.shards.default.svc.cluster.local"
+port = 19100
+metrics_host = "shards-4.shards.default.svc.cluster.local"
+metrics_port = 21100
+
+[[shards]]
+host = "shards-5.shards.default.svc.cluster.local"
+port = 19100
+metrics_host = "shards-5.shards.default.svc.cluster.local"
+metrics_port = 21100
+
+[[shards]]
+host = "shards-6.shards.default.svc.cluster.local"
+port = 19100
+metrics_host = "shards-6.shards.default.svc.cluster.local"
+metrics_port = 21100
+
+[[shards]]
+host = "shards-7.shards.default.svc.cluster.local"
+port = 19100
+metrics_host = "shards-7.shards.default.svc.cluster.local"
+metrics_port = 21100
+
+[[shards]]
+host = "shards-8.shards.default.svc.cluster.local"
+port = 19100
+metrics_host = "shards-8.shards.default.svc.cluster.local"
+metrics_port = 21100
+
+[[shards]]
+host = "shards-9.shards.default.svc.cluster.local"
+port = 19100
+metrics_host = "shards-9.shards.default.svc.cluster.local"
 metrics_port = 21100
