--- a/linera-chain/Cargo.toml
+++ b/linera-chain/Cargo.toml
@@ -11,11 +11,11 @@ license = "Apache-2.0"
 edition = "2021"
 
 [features]
-test = ["tokio/macros", "async-lock", "linera-base/test", "linera-execution/test"]
+test = ["tokio/macros", "linera-base/test", "linera-execution/test"]
 
 [dependencies]
 async-trait = { workspace = true }
-async-lock = { version = "2.6.0", optional = true }
+async-lock = { workspace = true }
 async-graphql = { workspace = true }
 linera-base = { workspace = true }
 linera-execution = { workspace = true }
