Convert ChainGuard to async_lock mutexes

--- a/linera-storage/Cargo.toml
+++ b/linera-storage/Cargo.toml
@@ -26,6 +26,7 @@ rocksdb = ["linera-views/rocksdb"]
 scylladb = ["linera-views/scylladb"]
 
 [dependencies]
+async-lock = { workspace = true }
 async-trait = { workspace = true }
 bcs = { workspace = true }
 dashmap = { workspace = true }
