--- a/linera-core/Cargo.toml
+++ b/linera-core/Cargo.toml
@@ -25,6 +25,7 @@ scylladb = ["linera-views/scylladb", "linera-storage/scylladb"]
 [dependencies]
 anyhow = { workspace = true, optional = true }
 async-graphql = { workspace = true }
+async-lock = { workspace = true }
 async-trait = { workspace = true }
 bcs = { workspace = true }
 dashmap = { workspace = true }
