Shards are assigned an ID which is their StatefulSet ordinal (#1061)
* Moved Dockerfiles to docker directory

* Added server-entrypoint to assign correct ordinal to shard

* Updated test-cloudbuild-local.yaml to use correct Dockerfile

--- a/docker/Dockerfile.aarch64
+++ b/docker/Dockerfile.aarch64
@@ -69,7 +69,11 @@ COPY --from=builder $BUILD_PATH/target/aarch64-unknown-linux-gnu/release/linera-
 COPY --from=builder $BUILD_PATH/target/aarch64-unknown-linux-gnu/release/linera-proxy ./
 
 # Copying configuration files
-COPY --from=builder $BUILD_PATH/configuration/k8s-local/validator_1.toml ./
+COPY --from=builder $BUILD_PATH/configuration/prod/validator_1.toml ./
+
+# Copy entrypoint
+COPY docker/server-entrypoint.sh .
+RUN chmod +x server-entrypoint.sh
 
 # Create configuration files for the validator according to the validator's config file.
 # * Private server states are stored in `server*.json`.
