--- a/linera-service/Cargo.toml
+++ b/linera-service/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2021"
 
 [features]
 default = ["wasmer", "rocksdb"]
+test = []
 benchmark = ["linera-base/test"]
 wasmer = ["linera-execution/wasmer", "linera-storage/wasmer"]
 wasmtime = ["linera-execution/wasmtime", "linera-storage/wasmtime"]
@@ -66,6 +67,7 @@ linera-chain = { workspace = true, features = ["test"] }
 linera-core = { workspace = true, features = ["test"] }
 linera-execution = { workspace = true, features = ["test"] }
 linera-rpc = { workspace = true, features = ["test"] }
+linera-service = { workspace = true, features = ["test"] }
 linera-storage = { workspace = true, features = ["test"] }
 linera-views = { workspace = true, features = ["test"] }
 proptest = { workspace = true }
