Implementation of the support of ScyllaDb for end-to-end tests.

--- a/linera-indexer/example/Cargo.toml
+++ b/linera-indexer/example/Cargo.toml
@@ -18,6 +18,7 @@ aws = ["linera-indexer/aws", "linera-indexer-plugins/aws"]
 scylladb = ["linera-indexer/scylladb", "linera-indexer-plugins/scylladb"]
 wasmer = ["linera-indexer-plugins/wasmer"]
 wasmtime = ["linera-indexer-plugins/wasmtime"]
+test = ["linera-service/test"]
 
 [dependencies]
 linera-indexer = { workspace = true }
