--- a/.github/workflows/dynamodb.yml
+++ b/.github/workflows/dynamodb.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches:
       - "**"
+    paths-ignore:
+      - 'CONTRIBUTING.md'
+      - 'INSTALL.md'
+      - 'docker/**'
+      - 'kubernetes/**'
   workflow_dispatch:
 
 # This allows a subsequently queued workflow run to interrupt previous runs on pull-requests
