--- a/.github/workflows/kubernetes.yml
+++ b/.github/workflows/kubernetes.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     branches:
       - "**"
+    paths-ignore:
+      - '*.md'
   workflow_dispatch:
 
 # This allows a subsequently queued workflow run to interrupt previous runs on pull-requests
